tests/aster/x/ocaml/map_index.error
exit status 2
File "/workspace/mochi/tests/transpiler/x/ocaml/map_index.ml", line 5, characters 100-101:
5 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "b" m))]));
                                                                                                        ^
Error: Syntax error: ']' expected
File "/workspace/mochi/tests/transpiler/x/ocaml/map_index.ml", line 5, characters 67-68:
5 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "b" m))]));
                                                                       ^
  This '[' might be unmatched
